# ollama-tui

./: .gitignore  Cargo.toml  {}
src/: main.rs
